# fastai

./: .env  pyproject.toml
fastai/: qdrant.py  rag.py  server.py  settings.py
