[tool.poetry]
name = "fastai"
version = "0.1.0"
description = ""
authors = ["ferrer <ferrer.morgado@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
langchain = "^0.3.9"
qdrant-client = "^1.12.1"
langchain-google-genai = "^2.0.6"
decouple = "^0.0.7"
langchain-community = "^0.3.8"
beautifulsoup4 = "^4.12.3"
langchain-qdrant = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
